--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -24,4 +10,12 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+.headerShadow {
+  box-shadow: 0px 14px 32px 0px rgba(214, 214, 214, 0.1),
+    0px 58px 58px 0px rgba(214, 214, 214, 0.09),
+    0px 130px 78px 0px rgba(214, 214, 214, 0.05),
+    0px 231px 92px 0px rgba(214, 214, 214, 0.01),
+    0px 360px 101px 0px rgba(214, 214, 214, 0);
 }
