--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,18 @@ body {
     0px 231px 92px 0px rgba(214, 214, 214, 0.01),
     0px 360px 101px 0px rgba(214, 214, 214, 0);
 }
+
+@layer utilities {
+  @variants responsive {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+  }
+}
