Added login page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,25 @@ body {
     }
   }
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.delayAnimation {
+  animation-delay: 2.5s;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
